--- a/css/social-media.css
+++ b/css/social-media.css
@@ -1,10 +1,29 @@
 .social-media {
   position: fixed;
-  width: 45px;
-  top: 30%;
-  left: 10;
+  height: 45px;
+  bottom: 0;
   background: transparent;
-  margin-left: 10px;
+  text-align: center;
+  width: 100%;
+}
+.social-media .sm-container {
+  width: 150px;
+  position: relative;
+  margin: 0 auto;
+}
+@media (min-width: 768px) {
+  .social-media {
+    width: 45px;
+    height: auto;
+    top: 30%;
+    left: 10;
+    margin: 0;
+    margin-left: 10px;
+  }
+  .social-media .sm-container {
+    width: 45px;
+    margin: 0;
+  }
 }
 .fa {
   padding: 10px;
