--- a/css/social-media.css
+++ b/css/social-media.css
@@ -89,7 +89,7 @@
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 .fa-skype {
-  background: #00aff0;
+  background: transparent;
   color: white;
 }
 .fa-android {
