--- a/css/styles.css
+++ b/css/styles.css
@@ -1109,3 +1109,150 @@ form {
 #contactForm .close {
   color: #fff;
 }
+.social-media {
+  position: fixed;
+  height: 45px;
+  bottom: 0;
+  background: transparent;
+  text-align: center;
+  width: 100%;
+  z-index: 999;
+}
+.social-media .sm-container {
+  width: 200px;
+  position: relative;
+  float: right;
+}
+@media (min-width: 768px) {
+  .social-media {
+    width: 45px;
+    height: auto;
+    top: 30%;
+    left: 10;
+    margin: 0;
+    margin-left: 10px;
+  }
+  .social-media .sm-container {
+    width: 45px;
+    margin: 0;
+  }
+}
+.social-media {
+  /* Add a hover effect if you want */
+}
+.social-media .fa {
+  padding: 10px;
+  font-size: 25px;
+  width: 45px;
+  height: 45px;
+  text-align: center;
+  text-decoration: none;
+  margin-bottom: 5px;
+}
+.social-media .fa:hover {
+  color: white;
+  text-decoration: none;
+}
+/* Facebook */
+.fa-facebook {
+  background: #4c70ba;
+  color: white;
+}
+.fa-facebook:hover {
+  background: #3B5998;
+}
+/* Twitter */
+.fa-twitter {
+  background: #83c3f3;
+  color: white;
+}
+.fa-twitter:hover {
+  background: #55ACEE;
+}
+.fa-google {
+  background: #e47365;
+  color: white;
+}
+.fa-google:hover {
+  background: #dd4b39;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+.fa-pinterest {
+  background: #e03e44;
+  color: white;
+}
+.fa-pinterest:hover {
+  background: #cb2027;
+}
+.fa-snapchat-ghost {
+  background: #fffc00;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+.fa-skype {
+  background: transparent;
+  color: white;
+}
+.fa-android {
+  background: #a4c639;
+  color: white;
+}
+.fa-dribbble {
+  background: #ea4c89;
+  color: white;
+}
+.fa-vimeo {
+  background: #45bbff;
+  color: white;
+}
+.fa-tumblr {
+  background: #2c4762;
+  color: white;
+}
+.fa-vine {
+  background: #00b489;
+  color: white;
+}
+.fa-foursquare {
+  background: #45bbff;
+  color: white;
+}
+.fa-stumbleupon {
+  background: #eb4924;
+  color: white;
+}
+.fa-flickr {
+  background: #f40083;
+  color: white;
+}
+.fa-yahoo {
+  background: #430297;
+  color: white;
+}
+.fa-whatsapp {
+  background: #43d854;
+  color: white;
+}
+.fa-soundcloud {
+  background: #ff5500;
+  color: white;
+}
+.fa-reddit {
+  background: #ff5700;
+  color: white;
+}
+.fa-rss {
+  background: #ff6600;
+  color: white;
+}
